-- -------------------------------------- --
-- -------------------------------------- --
-- Crear usuario inicial de Base de datos --
-- -------------------------------------- --
-- -------------------------------------- --

DROP USER IF EXISTS 'usuariopuntos'@'localhost';

CREATE USER 'usuariopuntos'@'localhost'
IDENTIFIED BY 'ProyectoPuntos';

GRANT
  SELECT,
  INSERT,
  UPDATE,
  DELETE,
  CREATE,
  ALTER,
  DROP,
  INDEX,
  REFERENCES
ON ruta66market.*
TO 'usuariopuntos'@'localhost';
-- -------------------------------
-- Tablas principales
-- -------------------------------


DROP TABLE IF EXISTS TRANSACTIONS;
DROP TABLE IF EXISTS LOYALTY_CARDS;
DROP TABLE IF EXISTS REWARDS;
DROP TABLE IF EXISTS STORES;
DROP TABLE IF EXISTS COMPANIES;
DROP TABLE IF EXISTS PLANS;
DROP TABLE IF EXISTS USERS;

CREATE TABLE USERS (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  email VARCHAR(255) UNIQUE NOT NULL,
  password VARCHAR(255) NOT NULL,
  nickname VARCHAR(100) NOT NULL,
  role ENUM('CLIENTE', 'ADMIN_NEGOCIO', 'ADMIN_PLATAFORMA') NOT NULL,
  created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE PLANS (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  name VARCHAR(100) NOT NULL,
  price DECIMAL(10,2) NOT NULL,
  max_stores INT NOT NULL,
  max_users INT NOT NULL,
  active BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE COMPANIES (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  owner_id BIGINT UNIQUE NOT NULL,
  plan_id BIGINT NOT NULL,
  legal_name VARCHAR(255) NOT NULL,
  tax_id VARCHAR(100) NOT NULL,
  subscription_status ENUM('ACTIVE','PAST_DUE','CANCELLED') NOT NULL,
  next_billing_date DATETIME,
  FOREIGN KEY (owner_id) REFERENCES USERS(id),
  FOREIGN KEY (plan_id) REFERENCES PLANS(id)
);

CREATE TABLE STORES (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  company_id BIGINT NOT NULL,
  name VARCHAR(255) NOT NULL,
  category VARCHAR(100),
  address VARCHAR(255),
  image_url VARCHAR(255),
  points_ratio INT,
  is_visible BOOLEAN NOT NULL DEFAULT TRUE,
  FOREIGN KEY (company_id) REFERENCES COMPANIES(id)
);

CREATE TABLE REWARDS (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  store_id BIGINT NOT NULL,
  name VARCHAR(255) NOT NULL,
  cost_points INT NOT NULL,
  image_url VARCHAR(255),
  active BOOLEAN NOT NULL DEFAULT TRUE,
  FOREIGN KEY (store_id) REFERENCES STORES(id)
);

CREATE TABLE LOYALTY_CARDS (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  user_id BIGINT NOT NULL,
  store_id BIGINT NOT NULL,
  current_balance INT NOT NULL DEFAULT 0,
  total_accumulated INT NOT NULL DEFAULT 0,
  last_visit DATETIME,
  FOREIGN KEY (user_id) REFERENCES USERS(id),
  FOREIGN KEY (store_id) REFERENCES STORES(id)
);

CREATE TABLE TRANSACTIONS (
  id BIGINT AUTO_INCREMENT PRIMARY KEY,
  card_id BIGINT NOT NULL,
  amount INT NOT NULL,
  type ENUM('EARN','REDEEM') NOT NULL,
  created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  FOREIGN KEY (card_id) REFERENCES LOYALTY_CARDS(id)
);

-- Índices para mejorar la búsqueda y actualización de los datos
CREATE INDEX idx_loyalty_user ON LOYALTY_CARDS(user_id);
CREATE INDEX idx_loyalty_store ON LOYALTY_CARDS(store_id);
CREATE INDEX idx_transactions_card ON TRANSACTIONS(card_id);